# PixLegends

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  out.txt  output.txt  setup_fonts.bat  setup_sdl2.bat
.claude/: settings.local.json
.claude/agents/: bullet-heaven-designer.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
assets/Textures/All Potions/Red potions/: hp_potion.aseprite
assets/Textures/Spells/: fire spells size and frames.txt
assets/Underworld Tilemap/Characters/giant boss/exports/: boss_spritesheet.json
include/: AssetManager.h  AudioManager.h  AutotileDemo.h  Boss.h  Database.h  DatabaseSQLite.h  Enemy.h  Game.h  InputManager.h  ItemSystem.h  LootGenerator.h  Object.h  Player.h  Projectile.h  Renderer.h  SpellSystem.h  UISystem.h  World.h
src/: AssetManager.cpp  AudioManager.cpp  AutotileDemo.cpp  Boss.cpp  Database.cpp  DatabaseSQLite.cpp  Enemy.cpp  Game.cpp  InputManager.cpp  ItemSystem.cpp  LootGenerator.cpp  Object.cpp  Player.cpp  Projectile.cpp  Renderer.cpp  SpellSystem.cpp  UISystem.cpp  World.cpp  main.cpp
tools/: extract-gif-frames.ps1  tmx-add-arena.ps1  tmx-postprocess.ps1
